Corrected SignUpAction class